--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,7 @@ body { margin: 0;}
 * {
     font-family: "Poppins", "Roboto", Arial, sans-serif !important;
 }
+
+.material-icons{
+  font-family: 'Material Icons' !important;
+}
