--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,1 +1,51 @@
-<p>home works!</p>
+<html>
+    <mat-grid-list cols="2" rowHeight="400px">
+        <mat-grid-tile>
+           
+                <p class = "header1">Get ready to experience the best of what’s happening near you!  </p>
+                <p class = "header2">We've handpicked the top 5 events for you to explore.</p>
+            
+            
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <mat-card>
+                <mat-card-header>kfekfewfei</mat-card-header>
+                <p>kfekfewfei</p>
+                <p>kfekfewfei</p>
+                <p>kfekfewfkenwfknewkfnkewfnewfei</p>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <mat-card>
+                <mat-card-header>kfekfewfei</mat-card-header>
+                <p>kfekfewfei</p>
+                <p>kfekfewfei</p>
+                <p>kfekfewfkenwfknewkfnkewfnewfei</p>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <p class = "header1">Get ready to experience the best of what’s happening near you! </p>
+            <p class = "header2">We've handpicked the top 5 events for you to explore.</p>
+        
+        </mat-grid-tile>
+        
+    </mat-grid-list>
+  
+    <!-- <div class = "top5events">
+        <p class = "header1">Get ready to experience the best of what’s happening near you! </p>
+        <p class = "header2">We've handpicked the top 5 events for you to explore.</p>
+        <mat-card>
+            <mat-card-header>kfekfewfei</mat-card-header>
+            <p>kfekfewfei</p>
+            <p>kfekfewfei</p>
+            <p>kfekfewfkenwfknewkfnkewfnewfei</p>
+        </mat-card>
+    </div>
+    <div class = "top5solutions">
+        <p class = "header1">You're searching for trusted services, exclusive products, or simply exploring? </p>
+        <p class = "header2">Check out the top 5 services and products your area has to offer!</p>
+    </div>
+    <div> -->
+        
+    <!-- </div> -->
+</html>
