--- a/src/app/services/pupservice-management/pupservice-management.component.html
+++ b/src/app/services/pupservice-management/pupservice-management.component.html
@@ -1,3 +1,7 @@
+<button mat-raised-button (click)="openModal()">
+  <mat-icon>add</mat-icon>
+  CREATE
+</button>
 <div class="table-container mat-elevation-z8">
   <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
     <!-- Service Name Column -->
