--- a/src/app/services/pupservice-management/pupservice-management.component.html
+++ b/src/app/services/pupservice-management/pupservice-management.component.html
@@ -89,3 +89,19 @@
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
+
+
+    <div class="search-container">
+      <button  class="filter-button">
+        <mat-icon class="filter-icon">tune</mat-icon>
+      </button>
+
+      <div class="search-bar">
+        <input class="search" type="search" placeholder="Search" (input)="applyFilter($event)">
+        <button class="search-button">
+          <mat-icon class="search-icon">search</mat-icon>
+        </button>
+      </div>
+
+    </div>
+
