--- a/src/app/event/event-card/event-card.component.html
+++ b/src/app/event/event-card/event-card.component.html
@@ -1,1 +1,13 @@
-<p>event-card works!</p>
+<mat-card>
+    <img mat-card-image src={{event.picture}}>
+    <mat-card-header>
+      <mat-card-title>{{event.name}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>{{event.location}}</p>
+      <p>{{event.description}}</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-flat-button>View More</button>
+    </mat-card-actions>
+  </mat-card>
