--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,45 +1,193 @@
-<mat-grid-list cols="2">
-    <!-- First Tile with Text Headers -->
-    <mat-grid-tile>
-      <div>
-        <p class="header1">Get ready to experience the best of what’s happening near you!</p>
-        <p class="header2">We've handpicked the top 5 events for you to explore.</p>
-      </div>
-    </mat-grid-tile>
+<div class="grid-container-top5events">
+
+  <div class="grid-item">
+    <div class="headers">
+      <p class="header1">Get ready to experience the best of what’s happening near you!</p>
+      <p class="header2">We've handpicked the top 5 events for you to explore.</p>
+    </div>
+  </div>
+
+  <div class="grid-item">
+    <!-- Ovde možeš implementirati karusel sa mat-card, ili drugi element za prikaz događaja -->
+    <div *ngFor="let event of events; let i = index" class="carousel-item">
+      <app-event-card [event]="event"></app-event-card>
+    </div>
+  </div>
+</div>
+
+<div class="grid-container-top5solutions">
+  <div class="grid-item">
+    <!-- Ovde možeš dodati karusel sa owl-carousel ili drugi tip prikaza -->
+    <!-- Na primer, ako koristiš owl-carousel, možeš koristiti sledeći kod: -->
     
-    <!-- Second Tile with Card Content -->
-    <mat-grid-tile>
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>Event 1</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>Event description or details go here.</p>
-          <p>More details about the event.</p>
-          <p>Additional information about the event.</p>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
+    <div *ngFor="let event of events; let i = index" class="carousel-item">
+      <app-event-card [event]="event"></app-event-card>
+    </div>
+    
+  </div>
 
-    <!-- Third Tile with Another Card -->
-    <mat-grid-tile>
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>Event 2</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>Event description or details go here.</p>
-          <p>More details about the event.</p>
-          <p>Additional information about the event.</p>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
+  <div class="grid-item">
+    <div class="headers">
+      <p class="header1">Get ready to experience the best of what’s happening near you!</p>
+      <p class="header2">We've handpicked the top 5 events for you to explore.</p>
+    </div>
+  </div>
 
-    <!-- Fourth Tile with More Text Headers -->
-    <mat-grid-tile>
-      <div>
-        <p class="header1">Get ready to experience the best of what’s happening near you!</p>
-        <p class="header2">We've handpicked the top 5 events for you to explore.</p>
+</div>
+
+<div class="all-events">
+
+  <div class="top-bar" >
+    <p class="header2">All events</p>
+
+    <div class="search-container">
+
+      <button  class="filter-button">
+        <mat-icon class="filter-icon">tune</mat-icon>
+      </button>
+
+      <div class="search-bar">
+        <input class="search" type="search" placeholder="Search all events" >
+
+        <button class="search-button">
+          <mat-icon class="search-icon">search</mat-icon>
+        </button>
+        
       </div>
-    </mat-grid-tile>
-  </mat-grid-list>
+      
+    </div>
+  </div>
+
+  <div class="events-cards">
+    <div class="row-events">
+
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      
+    </div>
+    <div class="row-events">
+
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      
+    </div>
+    <div class="paginator">
+      <mat-paginator [length]="100"
+              [pageSize]="10"
+              aria-label="Select page">
+             
+    </mat-paginator>
+    </div>
+    
+
+    
+  </div>
+
+</div>
+
+<div class="all-solutions">
+
+  <div class="top-bar" >
+    <p class="header2">All solutions</p>
+
+    <div class="search-container">
+
+      <button  class="filter-button">
+        <mat-icon class="filter-icon">tune</mat-icon>
+      </button>
+
+      <div class="search-bar">
+        <input class="search" type="search" placeholder="Search all events" >
+
+        <button class="search-button">
+          <mat-icon class="search-icon">search</mat-icon>
+        </button>
+        
+      </div>
+      
+    </div>
+  </div>
+
+  <div class="solutions-cards">
+    <div class="row-events">
+
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      
+    </div>
+    <div class="row-events">
+
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      <div class="grid-item">
+        <app-event-card></app-event-card>
+      </div>
+      
+    </div>
+    <div class="paginator">
+      <mat-paginator [length]="100"
+              [pageSize]="10"
+              aria-label="Select page">
+             
+    </mat-paginator>
+    </div>
+    
+
+    
+  </div>
+
+</div>
+
+
+
+
+
