--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%; background-color: #fffdf5;}
 body { margin: 0;}
 * {
     font-family: "Poppins", "Roboto", Arial, sans-serif !important;
