[FIX] - quick fixes

--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -123,7 +123,7 @@
       </button>
 
       <div class="search-bar">
-        <input class="search" type="search" placeholder="Search all events" >
+        <input class="search" type="search" placeholder="Search all services" >
 
         <button class="search-button">
           <mat-icon class="search-icon">search</mat-icon>
@@ -135,7 +135,7 @@
   </div>
 
   <div class="solutions-cards">
-    <div class="row-events">
+    <div class="row-services">
 
       <div class="grid-item">
         <app-event-card></app-event-card>
@@ -154,7 +154,7 @@
       </div>
       
     </div>
-    <div class="row-events">
+    <div class="row-services">
 
       <div class="grid-item">
         <app-event-card></app-event-card>
