--- a/src/app/layout/home/home.component.css
+++ b/src/app/layout/home/home.component.css
@@ -142,6 +142,14 @@
     grid-gap: 1em
 }
 
+.row-services{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20% ; 
+    margin-top: 1em;
+    grid-gap: 1em
+
+}
+
 mat-paginator{
     background-color: #fffdf5;
 }
