--- a/src/app/layout/home/home.component.css
+++ b/src/app/layout/home/home.component.css
@@ -153,3 +153,18 @@
 mat-paginator{
     background-color: #fffdf5;
 }
+
+.filter-panel {
+    position: relative;
+    background-color: #118AB2; /* Promenite boju pozadine */
+    color: #073B4C; /* Promenite boju teksta */
+    font-size: 1em; /* Promenite veličinu fonta */
+    border-radius: 20px; /* Zaobljeni uglovi */
+    padding: 0.5em; /* Dodajte padding */
+    margin-top: 1em;
+}
+
+.menu-location{
+    background-color: #07779c;
+}
+  
