--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -42,7 +42,7 @@
 
     <div class="search-container">
 
-      <button  class="filter-button">
+      <button  class="filter-button" (click)="toggleFilterPanel()" matTooltip="Filter options">
         <mat-icon class="filter-icon">tune</mat-icon>
       </button>
 
@@ -56,6 +56,42 @@
       </div>
       
     </div>
+  </div>
+
+  <div *ngIf="showFilterPanel" class="filter-panel">
+    <form >
+      <!-- Primer opcije za filter -->
+      <mat-form-field>
+        <mat-label class = "menu-location">Choose location</mat-label>
+        <mat-select class = "menu-location" [formControl]="locations" multiple>
+          <mat-select-trigger>
+            {{ locations.value?.[0] || '' }}
+            <span *ngIf="(locations.value?.length || 0) > 1" class="example-additional-selection">
+              (+{{ (locations.value?.length || 0) - 1 }} {{ locations.value?.length === 2 ? 'other' : 'others' }})
+            </span>
+          </mat-select-trigger>
+          <mat-option *ngFor="let location of locationsList" [value]="location">
+            {{ location }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label class = "menu-event-type">Choose event type</mat-label>
+        <mat-select [formControl]="eventTypes" multiple>
+          <mat-select-trigger>
+            {{ eventTypes.value?.[0] || '' }}
+            <span *ngIf="(eventTypes.value?.length || 0) > 1" class="example-additional-selection">
+              (+{{ (eventTypes.value?.length || 0) - 1 }} {{ eventTypes.value?.length === 2 ? 'other' : 'others' }})
+            </span>
+          </mat-select-trigger>
+          <mat-option *ngFor="let eventTypes of eventTypesList" [value]="eventTypes">
+            {{ eventTypes }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      
+    </form>
   </div>
 
   <div class="events-cards">
