--- a/src/app/services/edit-service/edit-service.component.html
+++ b/src/app/services/edit-service/edit-service.component.html
@@ -32,10 +32,10 @@
 
       <!-- Right Column -->
       <div class="right-column">
-        <button mat-raised-button color="primary">Upload Pictures</button>
+        <button mat-raised-button class="primary-button">UPLOAD PICTURES</button>
 
         <mat-radio-group formControlName="acceptance">
-          <mat-radio-button name="acceptance" value="auto">Auto accept</mat-radio-button>
+          <mat-radio-button name="acceptance" value="auto" >Auto accept</mat-radio-button>
           <mat-radio-button name="acceptance" value="manual">Manual accept</mat-radio-button>
         </mat-radio-group>
 
@@ -48,7 +48,7 @@
   </form>
 </mat-dialog-content>
 
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close color="warn">CANCEL</button>
-  <button mat-raised-button color="primary" (click)="update()">SAVE</button>
+<mat-dialog-actions class="actions-container">
+  <button mat-raised-button mat-dialog-close class="cancel-button">CANCEL</button>
+  <button mat-raised-button (click)="update()" class="primary-button">SAVE</button>
 </mat-dialog-actions>
