--- a/src/app/services/create-service/create-service.component.html
+++ b/src/app/services/create-service/create-service.component.html
@@ -4,7 +4,7 @@
     <div class="dialog-container">
       <!-- Left Column -->
       <div class="left-column">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" >
           <mat-label>Name</mat-label>
           <input matInput placeholder="Enter service name" name="name" type="text" formControlName="name" />
         </mat-form-field>
@@ -32,7 +32,7 @@
 
       <!-- Right Column -->
       <div class="right-column">
-        <button mat-raised-button color="primary">Upload Pictures</button>
+        <button mat-raised-button class="primary-button">UPLOAD PICTURES</button>
 
         <mat-radio-group formControlName="acceptance">
           <mat-radio-button name="acceptance" value="auto">Auto accept</mat-radio-button>
@@ -63,7 +63,7 @@
   </form>
 </mat-dialog-content>
 
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close color="warn">Cancel</button>
-  <button mat-raised-button color="primary" (click)="create()">Create</button>
+<mat-dialog-actions class="actions-container">
+  <button mat-raised-button mat-dialog-close class="cancel-button">CANCEL</button>
+  <button mat-raised-button (click)="create()" class="primary-button">CREATE</button>
 </mat-dialog-actions>
