--- a/src/app/services/pupservice-management/pupservice-management.component.css
+++ b/src/app/services/pupservice-management/pupservice-management.component.css
@@ -1,11 +1,29 @@
+.component {
+  background-color: #fffdf5;
+  padding: 2em;
+}
+
+.title {
+  font-size: 2.5em;
+  color: #073B4C;
+}
+
+/* Toolbar: Search and Create Button Row */
+.toolbar {
+  display: flex;
+  justify-content: space-between; /* Align search container left and button right */
+  align-items: center;
+  margin-bottom: 1em;
+}
+
 .search-container {
-  display: flex; /* Align filter button and search bar horizontally */
+  display: flex;
   align-items: center;
 }
 
 .filter-button {
   border: none;
-  background-color:  #fffdf5;
+  background-color: #fffdf5;
   margin-right: 0.5em;
   height: 3em;
   padding: 0.5em;
@@ -15,7 +33,6 @@
   display: flex;
   align-items: center;
   background-color: #e5f9ff;
-  border: #e5f9ff;
   border-radius: 20px;
   height: 3em;
   width: 30em;
@@ -28,26 +45,47 @@
   border-radius: 20px;
   height: 3em;
   width: 100%;
-  padding-left: 2em; /* Ensure padding for the search icon */
+  padding-left: 2em;
+}
+
+.search::placeholder {
+  color: #073b4c;
 }
 
 .search-icon {
   position: absolute;
   top: 0.6em;
   right: 0.5em;
-  color: #073B4C;
+  color: #073b4c;
 }
 
-.filter-icon {
-  color: #073B4C;
-}
 .search-button {
   border: none;
-  background-color:  #e5f9ff;
+  background-color: #e5f9ff;
   height: 3em;
   margin: 1em;
 }
 
-.search::placeholder {
-  color: #073B4C;
+.filter-icon {
+  color: #073b4c;
+}
+
+/* CREATE Button */
+.create-button {
+  height: 3em;
+  background-color: #0D5B75 !important;
+  color: white !important;
+}
+
+.create-button mat-icon {
+  margin-right: 0.5em;
+}
+
+/* Table Styling */
+.table-container {
+  margin-top: 1em;
+}
+
+.table-header {
+  background-color: #E5F9FF;
 }
