--- a/src/app/services/pupservice-product-management/pupservice-product-management.component.html
+++ b/src/app/services/pupservice-product-management/pupservice-product-management.component.html
@@ -1,8 +1,7 @@
-<mat-tab-group>
+<mat-tab-group selectedIndex="1">
   <mat-tab label="Products">
-    #TODO
   </mat-tab>
-  <mat-tab label="Services">
+  <mat-tab label="Services" >
+    <app-pupservice-management></app-pupservice-management>
   </mat-tab>
 </mat-tab-group>
-<app-pupservice-management></app-pupservice-management>
