--- a/src/app/services/create-service/create-service.component.html
+++ b/src/app/services/create-service/create-service.component.html
@@ -26,7 +26,38 @@
 
         <mat-form-field appearance="fill">
           <mat-label>Category</mat-label>
-          <input matInput placeholder="Enter category" name="category" type="text" formControlName="category" />
+          <mat-select formControlName="category">
+            <mat-option value="Category 1">
+               Category 1
+            </mat-option>
+            <mat-option value="Category 1">
+               Category 2
+            </mat-option>
+            <mat-option value="Category 1">
+               Category 3
+            </mat-option>
+            <mat-option value="Category 1">
+               Category 4
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Event Type</mat-label>
+          <mat-select formControlName="eventType">
+            <mat-option value="Event type 1">
+               Event type 1
+            </mat-option>
+            <mat-option value="Event type 1">
+               Event type 2
+            </mat-option>
+            <mat-option value="Event type 1">
+               Event type 3
+            </mat-option>
+            <mat-option value="Event type 1">
+               Event type 4
+            </mat-option>
+          </mat-select>
         </mat-form-field>
       </div>
 
