--- a/src/app/services/pupservice-management/pupservice-management.component.html
+++ b/src/app/services/pupservice-management/pupservice-management.component.html
@@ -110,7 +110,7 @@
         <td mat-cell *matCellDef="let element">
           {{element.discount}}%
           <mat-icon *ngIf="element.discount > 0" [ngStyle]="{'color':'#7E9B08'}">trending_up</mat-icon>
-          <mat-icon *ngIf="element.discount == 0" [ngStyle]="{'color':'red'}">trending_down</mat-icon>
+          <mat-icon *ngIf="element.discount == 0" [ngStyle]="{'color':'#B21114'}">trending_down</mat-icon>
         </td>
       </ng-container>
 
@@ -125,7 +125,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Visible </th>
         <td mat-cell *matCellDef="let element">
           <mat-icon *ngIf="element.visible" [ngStyle]="{'color':'#7E9B08'}">check</mat-icon>
-          <mat-icon *ngIf="!element.visible" [ngStyle]="{'color':'red'}">close</mat-icon>
+          <mat-icon *ngIf="!element.visible" [ngStyle]="{'color':'#B21114'}">close</mat-icon>
 
         </td>
       </ng-container>
@@ -135,7 +135,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Available </th>
         <td mat-cell *matCellDef="let element">
           <mat-icon *ngIf="element.visible" [ngStyle]="{'color':'#7E9B08'}">check</mat-icon>
-          <mat-icon *ngIf="!element.visible" [ngStyle]="{'color':'red'}">close</mat-icon>
+          <mat-icon *ngIf="!element.visible" [ngStyle]="{'color':'#B21114'}">close</mat-icon>
         </td>
       </ng-container>
 
@@ -164,7 +164,7 @@
           <button mat-icon-button (click)="edit(element)" [ngStyle]="{color: '#1082A8'}">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button (click)="remove(element)" [ngStyle]="{color: 'red'}">
+          <button mat-icon-button (click)="remove(element)" [ngStyle]="{color: '#B21114'}">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
