[FIX] - Fix event type multyselect

--- a/src/app/services/create-service/create-service.component.html
+++ b/src/app/services/create-service/create-service.component.html
@@ -44,17 +44,17 @@
 
         <mat-form-field appearance="fill">
           <mat-label>Event Type</mat-label>
-          <mat-select formControlName="eventType">
+          <mat-select formControlName="eventType" multiple>
             <mat-option value="Event type 1">
                Event type 1
             </mat-option>
-            <mat-option value="Event type 1">
+            <mat-option value="Event type 2">
                Event type 2
             </mat-option>
-            <mat-option value="Event type 1">
+            <mat-option value="Event type 3">
                Event type 3
             </mat-option>
-            <mat-option value="Event type 1">
+            <mat-option value="Event type 4">
                Event type 4
             </mat-option>
           </mat-select>
