--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import './colors.css';
 
-html, body { height: 100%; background-color: #fffdf5;}
+html, body { height: 100%; background-color: var(--light-beige);}
 body { margin: 0;}
 * {
     font-family: "Poppins", "Roboto", Arial, sans-serif !important;
