--- a/src/app/layout/nav-bar/nav-bar.component.css
+++ b/src/app/layout/nav-bar/nav-bar.component.css
@@ -1,14 +1,13 @@
-/* General navbar styles */
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #118AB2; /* Solid color (green) */
+    background-color: var(--primary-color); 
     padding: 10px 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: sticky;
-    top: 0; /* Sticks the navbar to the top of the viewport */
-    z-index: 1000; /* Ensures the navbar stays above other content */
+    top: 0; 
+    z-index: 1000; 
   }
   
   .navbar-logo {
@@ -26,11 +25,10 @@
     gap: 15px;
   }
   
-  /* Button styles */
   .nav-button {
     height: 3em;
-    background-color: #0D5B75 !important; 
-    color: #ffffff !important;
+    background-color: var(--secondary-color) !important; 
+    color: white !important;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -38,20 +36,20 @@
 
   
   .nav-button:hover {
-    background-color: #073B4C;
-    color: #ffffff;
+    background-color: var(--font-dark-blue);
+    color: white ;
   }
 
   .small-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 40px; /* Adjust for a consistent size */
+    width: 40px;
     height: 40px;
     border-radius: 50%; /* Makes it circular */
-    background-color: #0D5B75 !important;
-    color: #ffffff !important;
-    padding: 0; /* Remove any extra padding */
+    /*background-color: var(--primary-color) !important;*/
+    color: white !important;
+    padding: 0; 
   }
   
   .small-button mat-icon {
@@ -61,7 +59,7 @@
   }
   
   .small-button.mat-icon-button:hover {
-    background-color: #073B4C !important; /* Ensures your hover background color works */
-    color: #ffffff !important; /* Ensures text color is applied */
+    background-color: var(--font-dark-blue) !important; 
+    color: white !important; 
   }
   
