--- a/src/app/services/pupservice-management/pupservice-management.component.html
+++ b/src/app/services/pupservice-management/pupservice-management.component.html
@@ -71,12 +71,12 @@
       </mat-form-field>
 
       <div class="filter-actions">
-        <button mat-mini-fab [ngStyle]="{'background-color':'#073b4c'}" (click)="applyFilters()">
+        <button mat-mini-fab [ngStyle]="{'background-color':'var(--font-dark-blue)'}" (click)="applyFilters()">
           <mat-icon [ngStyle]="{'color':'white'}">filter_alt</mat-icon>
         </button>
       </div>
       <div class="filter-actions">
-        <button mat-mini-fab [ngStyle]="{'background-color':'#fffdf5'}" (click)="resetFilters()">
+        <button mat-mini-fab [ngStyle]="{'background-color':'var(--light-beige)'}" (click)="resetFilters()">
           <mat-icon [ngStyle]="{'color':'var(--font-dark-blue)'}">filter_alt_off</mat-icon>
         </button>
       </div>
