--- a/src/app/layout/home/home.component.css
+++ b/src/app/layout/home/home.component.css
@@ -154,15 +154,37 @@ mat-paginator{
     background-color: #fffdf5;
 }
 
+
 .filter-panel {
-    position: relative;
-    background-color: #118AB2; /* Promenite boju pozadine */
-    color: #073B4C; /* Promenite boju teksta */
-    font-size: 1em; /* Promenite veličinu fonta */
-    border-radius: 20px; /* Zaobljeni uglovi */
-    padding: 0.5em; /* Dodajte padding */
+    background-color: #118AB2;
+    color: #073B4C; 
+    padding: 1em;
+    border-radius: 20px;
+    margin-bottom: 1em;
     margin-top: 1em;
-}
+  }
+
+  .filter-form {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap; /* Ensures responsiveness for smaller screens */
+    gap: 1em; /* Space between items */
+    vertical-align: center;
+  }
+  
+  .filter-field {
+    flex: 1 1 200px; /* Adjust width of dropdowns */
+  }
+  
+  .filter-actions {
+    margin-top: -1em;
+    flex: 0 0 auto; /* Keep the button its natural size */
+  }
+  
+  .filter-actions button {
+    border-radius: 50%;
+  }
+  
 
 .menu-location{
     background-color: #07779c;
