--- a/src/colors.css
+++ b/src/colors.css
@@ -2,6 +2,7 @@
     --primary-color: #118AB2; /* Replace with your primary color */
     --secondary-color: #0D5B75;
     --light-beige: #fffdf5; 
+    --beige: #FFF1D0; 
     --light-blue: #E5F9FF;
     --font-dark-blue: #073B4C;
     --yellow-accent: #FFD166;
