[FIX] - fix sort option on solutions filter

--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -195,7 +195,7 @@
 
       <mat-radio-group aria-label="Sort by"> 
         <mat-label>Sort by</mat-label>                    
-        <mat-radio-button value="1">Date</mat-radio-button>
+        <mat-radio-button value="1">Price</mat-radio-button>
         <mat-radio-button value="2">Name</mat-radio-button>
       </mat-radio-group>
 
